# HolyBean

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  v3_backend_prd.md  v3_pi_prd.md
.github/workflows/: distribute.yml
android/: README.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/docs/: coroutine-conventions.md
android/scripts/: .gitignore  README.md  migrate_dynamo_to_firestore.py  requirements.txt
app/: build.gradle.kts
app/release/: output-metadata.json
aws/: get_current_order_num.py  get_order_item_specific.py
aws/go/: how_to_build.md
aws/python(deprecated)/: auth_api_key.py  delete_order.py  get_credits_list.py  get_last_menulist.py  get_order_day.py  get_report.py  post_order.py  update_credit_status.py
aws_lambda/: get_current_order_num.py  get_menulist.py  get_order_day.py  get_report.py
docs/: accessibility.md  menu-recategorization-draft.md
docs/class-documentation/: homefragment.md
firebase/: .firebaserc  dev-emulator.sh  firebase.json  firestore.rules  migrateMenuCategories.ts  moveAppleJuiceToEtc.ts  package-lock.json  package.json  seed-emulator.sh  vitest.config.ts  vitest.rules.config.ts
firebase/legacy/: mapDynamo.test.ts  seedDashboard.mjs
firebase/public/: app.js  firebase-config.example.js  firebase-init.js  (+3 more)
pi/: Cargo.toml
pi/deploy/: README.md  holybean-print-server.service  holybean-print.service
pi/src/: command.rs  config.rs  error.rs  escpos.rs  http.rs  layout.rs  main.rs  queue.rs  sink.rs
pi/tests/: golden_receipt.rs
printer/: build.gradle.kts
(+576 files in other folders)
